--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "farfetch_challenge",
+  "name": "desafio-chakra_ui",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.9",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@types/react-datepicker": "^4.3.4",
+    "framer-motion": "^4.1.17",
+    "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-datepicker": "^4.6.0",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "sass": "^1.38.2",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "typescript": "^4.3.5"
   }
 }
