--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "@types/react-datepicker": "^4.3.4",
+    "date-fns": "^2.28.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-spinners": "^0.11.0",
     "sass": "^1.38.2",
     "swiper": "^6.8.4"
   },
