--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/react-datepicker": "^4.3.4",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
