--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -19,7 +20,9 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
