--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^5.1.0",
     "react-spinners": "^0.11.0",
     "sass": "^1.38.2",
     "swiper": "^6.8.4"
