--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
+    "@types/jest": "^27.4.0",
     "@types/react-datepicker": "^4.3.4",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -33,10 +34,18 @@
     "swiper": "^6.8.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^16.7.1",
     "@types/react": "^17.0.19",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-jest": "^27.4.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.7",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.3.5"
   }
 }
